# my-agent-girlfriend

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/presets/: manifest.json
assets/voices/: manifest.json
mac-app/: Package.swift
mac-app/Sources/GirlfriendDesktop/: main.swift
references/: persona.md  preset-pack.md
scripts/: bootstrap_presets.py  compose_bubble.py  generate_voices.py  launch_desktop.sh  play_voice.py  push_overlay.py  render_reply.py  run_bridge.py
src/my_agent_girlfriend/: __init__.py  app_bridge.py  bootstrap.py  bubble.py  manifest.py  rendering.py  routing.py
tests/: test_bootstrap_presets.py  test_compose_bubble.py  test_overlay_truncate.py  test_routing.py
